crates/biome_cli/tests/snapshots/main_cases_reporter_terminal/reports_diagnostics_check_write_command_file.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome check --max-diagnostics=5 --reporter=default --reporter-file=file.txt main.ts index.ts index.css
```

## `file.txt`

```txt
index.css:3:26 parse ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ✖ Expected a declaration item but instead found '}'.
  
  > 3 │ .brokenStyle { color: f( }
      │                          ^
    4 │ 
    5 │ .style {
  
  ℹ Expected a declaration item here.
  
  > 3 │ .brokenStyle { color: f( }
      │                          ^
    4 │ 
    5 │ .style {
  
index.css:3:23 lint/correctness/noUnknownFunction ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ✖ Unexpected unknown function: f
  
  > 3 │ .brokenStyle { color: f( }
      │                       ^
    4 │ 
    5 │ .style {
  
  ℹ Use a known function instead.
  
  ℹ See MDN web docs for more details.
  
index.css:7:17 lint/correctness/noUnknownFunction ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ✖ Unexpected unknown function: fakeFunction
  
    5 │ .style {
    6 │                 color:
  > 7 │                 fakeFunction()
      │                 ^^^^^^^^^^^^
    8 │ }
    9 │ 
  
  ℹ Use a known function instead.
  
  ℹ See MDN web docs for more details.
  
index.css format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ✖ Code formatting aborted due to parsing errors. To format code with errors, enable the 'formatter.formatWithErrors' option.
  
index.ts:1:1 assist/source/organizeImports  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ✖ Sort these imports.
  
  > 1 │ import { z} from "z"
      │ ^^^^^^^^^^^^^^^^^^^^
  > 2 │ import { z, b , a} from "lodash"
      │ ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    3 │ 
    4 │ a ==b
  
  ℹ Safe fix: Organize imports and exports (Biome)
  
     1    │ - import·{·z}·from·"z"
     2    │ - import·{·z,·b·,·a}·from·"lodash"
        1 │ + import·{·a,·b·,·z·}·from·"lodash"
        2 │ + import·{·z}·from·"z"
     3  3 │   
     4  4 │   a ==b
  
The number of diagnostics exceeds the limit allowed. Use --max-diagnostics to increase it.
Diagnostics not shown: 59.Checked 3 files in <TIME>. No fixes applied.
Found 48 errors.
Found 16 warnings.
```

## `index.css`

```css
.brokenStyle {
  color: f(
}

.style {
  color: fakeFunction();
}
```

## `index.ts`

```ts
import { z} from "z"
import { z, b , a} from "lodash"

a ==b
a ==b
a ==b
a ==b

debugger
debugger
debugger
debugger

let f;
let f;
let f;
		let f;
		let f;
		let f;
```

## `main.ts`

```ts
import { z} from "z"
import { z, b , a} from "lodash"

a ==b
a ==b
a ==b
a ==b

debugger
debugger
debugger
debugger

let f;
let f;
let f;
		let f;
		let f;
		let f;
```

# Termination Message

```block
check ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```
