crates/biome_cli/tests/snapshots/main_cases_reporter_terminal/reports_diagnostics_check_write_command_verbose.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome check --write --max-diagnostics=5 --verbose main.ts index.ts index.css
```

## `index.css`

```css
.brokenStyle {
  color: f(
}

.style {
  color: fakeFunction();
}
```

## `index.ts`

```ts
import { a, b, z } from "lodash";
import { z } from "z";

a == b;
a == b;
a == b;
a == b;

debugger;
debugger;
debugger;
debugger;

let f;
let f;
let f;
let f;
let f;
let f;

```

## `main.ts`

```ts
import { a, b, z } from "lodash";
import { z } from "z";

a == b;
a == b;
a == b;
a == b;

debugger;
debugger;
debugger;
debugger;

let f;
let f;
let f;
let f;
let f;
let f;

```

# Termination Message

```block
check ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while applying fixes.
  


```

# Emitted Messages

```block
index.css:3:26 parse ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Expected a declaration item but instead found '}'.
  
  > 3 │ .brokenStyle { color: f( }
      │                          ^
    4 │ 
    5 │ .style {
  
  i Expected a declaration item here.
  
  > 3 │ .brokenStyle { color: f( }
      │                          ^
    4 │ 
    5 │ .style {
  

```

```block
index.css:3:23 lint/correctness/noUnknownFunction ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Unexpected unknown function: f
  
  > 3 │ .brokenStyle { color: f( }
      │                       ^
    4 │ 
    5 │ .style {
  
  i Use a known function instead.
  
  i See MDN web docs for more details.
  

```

```block
index.css:7:17 lint/correctness/noUnknownFunction ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Unexpected unknown function: fakeFunction
  
    5 │ .style {
    6 │                 color:
  > 7 │                 fakeFunction()
      │                 ^^^^^^^^^^^^
    8 │ }
    9 │ 
  
  i Use a known function instead.
  
  i See MDN web docs for more details.
  

```

```block
index.css format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Code formatting aborted due to parsing errors. To format code with errors, enable the 'formatter.formatWithErrors' option.
  

```

```block
index.ts:4:3 lint/suspicious/noDoubleEquals  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Using == may be unsafe if you are relying on type coercion.
  
    2 │ import { z } from "z";
    3 │ 
  > 4 │ a == b;
      │   ^^
    5 │ a == b;
    6 │ a == b;
  
  i == is only allowed when comparing against null.
  
  i Unsafe fix: Use === instead.
  
    4 │ a·===·b;
      │     +   

```

```block
 VERBOSE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i Files processed:
  
  - index.css
  - index.ts
  - main.ts
  

```

```block
 VERBOSE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i Files fixed:
  
  - index.ts
  - main.ts
  

```

```block
Skipped 64 suggested fixes.
If you wish to apply the suggested (unsafe) fixes, use the command biome check --write --unsafe

```

```block
The number of diagnostics exceeds the limit allowed. Use --max-diagnostics to increase it.
Diagnostics not shown: 55.
```

```block
Scanned project folder in <TIME>.
Checked 3 files in <TIME>. Fixed 2 files.
Found 44 errors.
Found 16 warnings.
```
